Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -6,7 +6,8 @@
       "name": "learncpp.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPMOWc5p/2edog2uo50aS+A",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyP3B7lVVwtPAJDndHxqGzEl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +66,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-jTNMcEE-y3-"
+        "id": "-jTNMcEE-y3-",
+        "outputId": "56ce3437-1a36-40ea-d450-b2753b9e4df5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -74,11 +79,18 @@
         "\n",
         "int main() {\n",
         "  cout << \"Hello World!\";\n",
-        "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -92,60 +104,93 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8Lf0COUH-9ol"
+        "id": "8Lf0COUH-9ol",
+        "outputId": "b7600a42-163a-4354-d14d-bbc8fa2d1308",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World!"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "V7FCGvXToerV"
+        "id": "V7FCGvXToerV",
+        "outputId": "58fa723a-c88d-4d72-997f-f6e552c373e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# 実験 改行コードとかが使えるかの実験\n",
         "%%writefile temp.cpp\n",
-        "# include <bits/stdc++.h>c++.h>\n",
+        "# include <bits/stdc++.h>\n",
         "int main() {\n",
         "  std::cout << \"hello world\\n \\t初めてのC++\" << \"\\n\";\n",
         "  std::cout << \"次の行\";\n",
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Gdy2RltWBMlU"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "g8VptCMXpWoT"
-      },
-      "source": [
-        "for 構文\n",
-        "\n",
-        "次のは `i` を 1 ずつ増やして行って 9 回 メッセージを書くプログラム。"
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vHNrx0tRpuBf"
+        "id": "Gdy2RltWBMlU",
+        "outputId": "56b3ca72-e4be-4aee-f4ae-dee0c4141966",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n",
+            " \t初めてのC++\n",
+            "次の行"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vHNrx0tRpuBf",
+        "outputId": "56c2188c-71ed-4e32-edb4-363b130f18d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# for 構文\n",
+        "# 次のは i を 1 ずつ増やして行って 9 回 メッセージを書くプログラム。\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "\n",
@@ -153,29 +198,47 @@
         "  for (int i = 0; i < 10; i++) std::cout << \"Hello World\" << \"\\n\";\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hxXfoxj8Bkb2"
+        "id": "hxXfoxj8Bkb2",
+        "outputId": "44353c29-ed76-431f-d859-191ba9a4b2da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "oJgZ4xyUmxoa"
-      },
-      "source": [
-        "コメントは\n",
-        "\n",
-        "`//`  と `/*` と `*/` "
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n",
+            "Hello World\n"
+          ]
+        }
       ]
     },
     {
@@ -184,44 +247,17 @@
         "id": "VtOagpx9EaSA"
       },
       "source": [
+        "コメントは `//`  と `/*` と `*/` \n",
+        "\n",
         "`# include <bits/stdc++.h>` はヘッダーライブラリーと呼ばれるもの。\n",
         "\n",
         "`using namespace std` は標準ライブラリーのオブジェクトや変数の名前を使える、と言うこと。\n",
         "\n",
         "`cout` はシーアウトと読み、`<<` とセットで使われる。\n",
         "\n",
-        "改行やホワイトスペースについては `int main () { cout << \"Hello World! \"; return 0; }` と書いても同じ。\n",
+        "改行やホワイトスペースについては `int main () { cout << \"Hello World! \"; return 0; }` と続けて書いても同じ。\n",
         "\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ebJGPq8FF3gk"
-      },
-      "source": [
-        "%%writefile temp.cpp\n",
-        "# include <bits/stdc++.h>\n",
-        "\n",
-        "int main() {\n",
-        "    std::cout << \"Hello World! \\n\\n\";\n",
-        "    std::cout << \"I am learning C++\";\n",
-        "    return 0;\n",
-        "}"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YiQpXtXVGGiI"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -234,21 +270,25 @@
         "# * \"string\"\n",
         "# * bool (true, false) \n",
         "\n",
-        "# など。 python などとそんなに違わない。"
+        "# など。"
       ],
       "metadata": {
         "id": "9xEHO9jxdjDe"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Mc2my2c0es1D"
+        "id": "Mc2my2c0es1D",
+        "outputId": "7604ab32-3820-43a5-f5ea-5cdc768d2710",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# cout に数値(int)を文字列に変換せずに与えて大丈夫か => 大丈夫\n",
+        "# cout は文字列と数値を受け付ける\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -256,22 +296,41 @@
         "int main() {\n",
         "  int myNum = 15;\n",
         "  cout << myNum;\n",
-        "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JRO5IbRYdIr8"
+        "id": "JRO5IbRYdIr8",
+        "outputId": "da15e87f-aedc-493f-fa2e-dc92e71d6a18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -288,7 +347,6 @@
         "  int myNum = 15;   // Now myNum is 15\n",
         "  myNum = 10;       // Now myNum is 10\n",
         "  cout << myNum;\n",
-        "  return 0;\n",
         "}"
       ],
       "execution_count": null,
@@ -358,7 +416,6 @@
         "int main() {\n",
         "  int myAge = 35;\n",
         "  cout << \"I am \" << myAge << \" years old.\";\n",
-        "  return 0;\n",
         "}"
       ],
       "execution_count": null,
@@ -390,7 +447,6 @@
         "  int y = 6;\n",
         "  int sum = x + y;\n",
         "  cout << sum;\n",
-        "  return 0;\n",
         "}"
       ],
       "execution_count": null,
@@ -420,7 +476,6 @@
         "int main() {\n",
         "  int x = 5, y = 6, z = 50;  \n",
         "  cout << x + y + z;\n",
-        "  return 0;\n",
         "}"
       ],
       "execution_count": null,
@@ -1054,7 +1109,7 @@
         "  cout << greeting;\n",
         "}"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1077,7 +1132,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1121,7 +1176,7 @@
         "  cout << \"5 % 2 = \" << x % y ;\n",
         "}\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,7 +1199,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1178,7 +1233,7 @@
         "  cout << \"-5 % 2 = \" << x % y ;\n",
         "}"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1201,7 +1256,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1227,7 +1282,7 @@
         "print(-5//2)\n",
         "print(-5 % 2)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1271,7 +1326,7 @@
         "  cout << \"pow(\" << y << \", \" << x << \") = \" << pow(y, x);\n",
         "}"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1294,7 +1349,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1339,7 +1394,7 @@
         "  cout << --x << \"\\n\";\n",
         "}"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1362,7 +1417,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1398,7 +1453,7 @@
         "    cout << x;\n",
         "}"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1421,7 +1476,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1459,7 +1514,7 @@
         "id": "ixIvpcsJK0u_",
         "outputId": "7de33adb-e15f-457a-e29b-0ac030223972"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1482,7 +1537,7 @@
         "id": "XRpLe0v7LTuw",
         "outputId": "d794737d-295a-4d8c-feae-3be1889cd3eb"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1511,7 +1566,7 @@
         "print(np.base_repr(5, 2))\n",
         "print(np.base_repr(4,2))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1544,7 +1599,7 @@
         "  cout << x;\n",
         "}"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1567,7 +1622,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
