Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO7uBE5IgamqctRZKKDoVpC",
+      "authorship_tag": "ABX9TyNMFtIfKJM/dwXtgpZpBF/N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1400,15 +1400,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "kb6QPx4Dyi_O"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "Hpc2_pUod-fM",
@@ -1489,12 +1480,12 @@
         "</table>"
       ],
       "metadata": {
-        "id": "7ltxraARyrpM",
-        "outputId": "c6270642-17e7-46d6-9a87-751e25a145f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
-        }
+        },
+        "id": "7ltxraARyrpM",
+        "outputId": "c6270642-17e7-46d6-9a87-751e25a145f2"
       },
       "execution_count": 16,
       "outputs": [
@@ -1683,15 +1674,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "WxmC900lIEdI"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "WV8MmKZ6gqSw"
       },
@@ -1707,13 +1689,10 @@
       "source": [
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
         "using namespace std;\n",
-        "\n",
         "int main() {\n",
         "  string greeting = \"Hello\";\n",
         "  cout << greeting;\n",
-        "  return 0;\n",
         "}"
       ],
       "execution_count": null,
@@ -1742,45 +1721,71 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "llvccZAOBmoX"
+        "id": "llvccZAOBmoX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bafe5933-104c-4574-d31b-77bd828aa6d9"
       },
       "source": [
+        "# 文字列連結 string concatination `+`\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "#include <string>\n",
         "using namespace std;\n",
-        " \n",
         "int main () {\n",
         "  string firstName = \"John \";\n",
         "  string lastName = \"Doe\";\n",
         "  string fullName = firstName + lastName;\n",
         "  cout << fullName;\n",
-        "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r995sRAhBrIa"
+        "id": "r995sRAhBrIa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8c6274e4-0882-4870-eacf-9d6038cbe4b9"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "John Doe"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-iqkU708CLAj"
+        "id": "-iqkU708CLAj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6a6b0759-7e81-41d2-bc8e-9a623c324025"
       },
       "source": [
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
         "using namespace std;\n",
         " \n",
         "int main () {\n",
@@ -1788,93 +1793,162 @@
         "  string lastName = \"Doe\";\n",
         "  string fullName = firstName.append(lastName);\n",
         "  cout << fullName;\n",
-        "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SJR6YJUbCU_o"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "O8rjyAcwCzW5"
-      },
-      "source": [
-        "%%writefile temp.cpp\n",
-        "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  string txt = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\";\n",
-        "  cout << \"The length of the txt string is: \" << txt.length();\n",
-        "  return 0;\n",
-        "}"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bN8osuBqC8Oe"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jP_tkJIQDsvB"
-      },
-      "source": [
-        "txt.length() と txt.size() は同じ。"
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fwhtd7A5Dn6V"
-      },
-      "source": [
-        "%%writefile temp.cpp\n",
-        "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  string txt = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\";\n",
-        "  cout << \"The length of the txt string is: \" << txt.size();\n",
-        "  return 0;\n",
-        "}"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "tFZQBolJDn6V"
+        "id": "SJR6YJUbCU_o",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "491a3a5d-e4b1-4749-bc77-0c5fba986a4c"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "John Doe"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O8rjyAcwCzW5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "18e0547e-a5e3-47f7-9e9e-6ddba5a8d88c"
+      },
+      "source": [
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main() {\n",
+        "  string txt = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\";\n",
+        "  cout << \"The length of the txt string is: \" << txt.length() << endl;\n",
+        "  cout << \"The size of the txt string is: \" << txt.size() << endl;\n",
+        "}"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bN8osuBqC8Oe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4e1d6208-3096-447f-c91c-b776ceda91d6"
+      },
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The length of the txt string is: 26\n",
+            "The size of the txt string is: 26\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fwhtd7A5Dn6V",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "817d67fb-b772-4f94-b79a-79add6e701de"
+      },
+      "source": [
+        "# txt.length() と txt.size() は同じか\n",
+        "# 2バイト文字(全角文字)を数えない点も含め、同じみたい\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main() {\n",
+        "  string txt = \"日本語\";\n",
+        "  cout << txt << endl;\n",
+        "  cout << \"The length of the txt string is: \" << txt.length() << endl;\n",
+        "  cout << \"The size of the txt string is: \" << txt.size() << endl;\n",
+        "}"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tFZQBolJDn6V",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2f99694b-9c70-4a84-ed54-d02e80c83165"
+      },
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "日本語\n",
+            "The length of the txt string is: 9\n",
+            "The size of the txt string is: 9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ\n"
+      ],
+      "metadata": {
+        "id": "MQgPOFBjGD0M"
+      }
     },
     {
       "cell_type": "code",
