Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNT8gaP1O7hxF0+yCQZQ0pU",
+      "authorship_tag": "ABX9TyMTcoGJNK+Sv4O+Tx04HA4Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2731,7 +2731,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2757,7 +2757,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2770,15 +2770,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "ciW7TNPXQwQw"
-      }
     },
     {
       "cell_type": "code",
@@ -2804,7 +2795,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2827,7 +2818,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2867,7 +2858,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2890,7 +2881,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2911,6 +2902,7 @@
         "id": "mekcQLVJ5C21"
       },
       "source": [
+        "# for 構文\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -2939,9 +2931,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6B9Qb9kU5d75"
+        "id": "6B9Qb9kU5d75",
+        "outputId": "dc45b981-676c-49f3-f76c-83ab5040571c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "# for 構文で i を 2 ずつ増やす\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -2953,26 +2950,56 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xi5yv6sO5jx2"
+        "id": "Xi5yv6sO5jx2",
+        "outputId": "b0d3d899-bf6c-4357-b555-6046cf43c3c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tRiVBXFL2rnC"
+        "id": "tRiVBXFL2rnC",
+        "outputId": "76d598ee-074e-4f88-c6e6-d2741bdb2af8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "# continue\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -2987,92 +3014,167 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "holEDCC520Dk"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZZyfhNB1YqRL"
-      },
-      "source": [
-        "# 配列"
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qf_0WEWnl4yx"
+        "id": "holEDCC520Dk",
+        "outputId": "d6ee0827-42d1-4c22-ac81-f3fc301488af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qf_0WEWnl4yx",
+        "outputId": "bfd0f850-7e0e-4540-d4c1-14c083b03bcc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 配列\n",
+        "# 次のは C の配列で、今はあまり使われないのではないか\n",
+        "# vector を使う。array もある。list もある。\n",
         "%%writefile temp.cpp\n",
         "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
         "  string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
         "  cout << cars[0];\n",
-        "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "e3onRGAemAhi"
+        "id": "e3onRGAemAhi",
+        "outputId": "e52a4c58-2130-46bb-d5cb-0a2c6a7f3f5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Volvo"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JickdBaumMKJ"
+        "id": "JickdBaumMKJ",
+        "outputId": "8e322d83-f021-4b8a-d3af-6c1c4dc967c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "# C の配列は項の書き換えが出来る\n",
         "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
         "  string cars[4] = {\"Volvo\", \"BMW\", \"Ford\", \"Mazda\"};\n",
         "  cars[0] = \"Opel\";\n",
         "  cout << cars[0];\n",
-        "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xME08Ssamati"
+        "id": "xME08Ssamati",
+        "outputId": "9527ac0e-4d66-4803-dc14-ea509937cee0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Opel"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "2mUjtFMSpJp9"
+      }
     },
     {
       "cell_type": "code",
@@ -3081,9 +3183,7 @@
       },
       "source": [
         "%%writefile temp.cpp\n",
-        "\n",
         "# include <bits/stdc++.h>\n",
-        "#include <string>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
